<resources>
  <string name="app_name">Game</string>
  <string name="game_title">Game!</string>
  <string name="play_button">PLAY</string>
  <string name="login_button">LOGIN</string>
  <string name="username">Username</string>
  <string name="color">Color</string>
  <string name="elasticity">Elasticity</string>
  <string name="sensitivity">Sensitivity</string>
    <string name="levels">Select your levels here!</string>
</resources>
